<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>decision_maker</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2262949387@qq.com">luo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_mapping_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>lanelet2_extension</depend>
  <depend>nav_msgs</depend>
  <depend>decision_maker_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
